--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,36 @@
-*.tiff
-*.txt
-*.pptx
-*.png
-*.nor
-*.jpg
+
+### Python template
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+
+__enamlcache__/
+
+
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+
+
+# vim
+*.swp
+
+# PyCharm
+.idea/
+
+# VS Code
+.vscode/
+
+#ipython notebook stuff
+.ipynb_checkpoints/
+
+.tags
